@@ -8,6 +8,10 @@ Under development
 Features added
 --------------
 
+* The ``docinfo`` on ElementTree objects has new properties ``internalDTD``
+  and ``externalDTD`` that return a DTD object for the internal or external
+  subset of the document respectively.
+
 * Serialising an ElementTree now includes any internal DTD subsets that are
   part of the document, as well as comments and PIs that are siblings of the
   root node.
